# EmailParser-Danish-English

./: .gitignore  LICENSE  README.md  app_requirements.txt  email_preprocessing.py  pyproject.toml  requirements.txt
src/da_en_email_parser_ahmaba/: __init__.py  da_en_email_parser.py  resources.py
