[project]
name = "da_en_email_parser_ahmaba"
version = "0.0.2"
authors = [
  { name="Ahmad Balkiss", email="ab.dev@tutamail.com" },
]
description = "A small package that converts email strings to structured python dictionaries. Supports Danish and English"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/Au2mater/EmailParser-Danish-English"
Issues = "https://github.com/Au2mater/EmailParser-Danish-English/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
